--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8"><title>DZ-TRAFFIC | دخول</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DZ-TRAFFIC | دخول</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div class="bg-white p-10 rounded-3xl shadow-2xl text-center max-w-sm w-full border-t-8 border-blue-600">
-        <h1 class="text-4xl font-black text-blue-600 mb-2">DZ-TRAFFIC</h1>
-        <p class="mb-8 text-gray-500">سجل الآن واحصل على 10,000 نقطة مجاناً!</p>
-        <button onclick="login()" class="w-full flex items-center justify-center gap-3 bg-white border-2 py-3 rounded-2xl font-bold hover:bg-gray-50 transition">
-            <img src="https://www.svgrepo.com/show/355037/google.svg" class="w-6"> الدخول عبر جوجل
+        <h1 class="text-4xl font-black text-blue-600 mb-2 italic">DZ-TRAFFIC</h1>
+        <p class="text-gray-500 mb-8 font-medium">سجل الآن واستلم 10,000 نقطة هدية! 🎁</p>
+        
+        <button onclick="loginWithGoogle()" class="w-full flex items-center justify-center gap-3 bg-white border-2 border-gray-200 py-3 rounded-2xl font-bold hover:bg-gray-50 transition shadow-sm">
+            <img src="https://www.svgrepo.com/show/355037/google.svg" class="w-6" alt="Google">
+            الدخول عبر جوجل
         </button>
     </div>
+
     <script>
-        const _supabase = supabase.createClient("YOUR_SUPABASE_URL", "YOUR_SUPABASE_KEY");
-        async function login() {
+        // ضع مفاتيحك هنا من إعدادات Supabase API
+        const SUPABASE_URL = "https://nbioqaxgjzpyrbcwdkds.supabase.co"; 
+        const SUPABASE_KEY = "ضـع_مـفـتـاح_ANON_الـخـاص_بـك_هـنـا";
+        const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+
+        async function loginWithGoogle() {
             await _supabase.auth.signInWithOAuth({
                 provider: 'google',
-                options: { redirectTo: window.location.origin + '/profile.html' }
+                options: { 
+                    // تأكد أن هذا الرابط مضاف في إعدادات Supabase و Google Cloud
+                    redirectTo: 'https://dz-traffic-v2.vercel.app/profile.html' 
+                }
             });
         }
     </script>
