--- a/profile.html
+++ b/profile.html
@@ -1,35 +1,52 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8"><title>تفعيل الهدية</title>
+    <meta charset="UTF-8">
+    <title>تفعيل الحساب | DZ-TRAFFIC</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 </head>
 <body class="bg-blue-50 flex items-center justify-center min-h-screen">
     <div class="bg-white p-8 rounded-3xl shadow-xl w-full max-w-md">
-        <h2 class="text-2xl font-bold text-center mb-6">أكمل بياناتك لاستلام 10,000 نقطة 🎁</h2>
-        <form id="pForm" class="space-y-4">
-            <input type="text" id="user" placeholder="اسم المستخدم" class="w-full p-4 border rounded-2xl" required>
-            <input type="tel" id="phone" placeholder="رقم الهاتف" class="w-full p-4 border rounded-2xl" required>
-            <button type="submit" class="w-full bg-blue-600 text-white py-4 rounded-2xl font-bold shadow-lg">تفعيل الحساب والهدية 🚀</button>
+        <h2 class="text-2xl font-bold text-center mb-6">أكمل بياناتك واستلم 10,000 نقطة 🎁</h2>
+        <form id="profileForm" class="space-y-4">
+            <input type="text" id="username" placeholder="اسم المستخدم (بالإنجليزي)" class="w-full p-4 border rounded-2xl outline-none focus:ring-2 focus:ring-blue-500" required>
+            <input type="tel" id="phone" placeholder="رقم الهاتف (الجزائر)" class="w-full p-4 border rounded-2xl outline-none focus:ring-2 focus:ring-blue-500" required>
+            <button type="submit" class="w-full bg-blue-600 text-white py-4 rounded-2xl font-bold text-lg hover:bg-blue-700 transition">تفعيل الحساب والهدية 🚀</button>
         </form>
     </div>
+
     <script>
-        const _supabase = supabase.createClient("YOUR_SUPABASE_URL", "YOUR_SUPABASE_KEY");
-        document.getElementById('pForm').onsubmit = async (e) => {
+        const SUPABASE_URL = "https://nbioqaxgjzpyrbcwdkds.supabase.co";
+        const SUPABASE_KEY = "ضـع_مـفـتـاح_ANON_الـخ_اص_بـك_هـنـا";
+        const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+
+        document.getElementById('profileForm').onsubmit = async (e) => {
             e.preventDefault();
-            if (localStorage.getItem('registered_dz')) return alert("هذا الجهاز مسجل مسبقاً!");
             
+            // حماية الجهاز
+            if (localStorage.getItem('dz_user_registered')) {
+                alert("هذا الجهاز مسجل بالفعل!");
+                window.location.href = "dashboard.html";
+                return;
+            }
+
             const { data: { user } } = await _supabase.auth.getUser();
+            if (!user) return window.location.href = "index.html";
+
             const { error } = await _supabase.from('profiles').upsert({
-                id: user.id, username: document.getElementById('user').value,
-                phone: document.getElementById('phone').value, points: 10000
+                id: user.id,
+                username: document.getElementById('username').value,
+                phone: document.getElementById('phone').value,
+                points: 10000 // الهدية
             });
 
             if (!error) {
-                localStorage.setItem('registered_dz', 'true');
+                localStorage.setItem('dz_user_registered', 'true');
                 window.location.href = "dashboard.html";
-            } else { alert(error.message); }
+            } else {
+                alert("خطأ في التسجيل: " + error.message);
+            }
         };
     </script>
 </body>
