--- a/profile.html
+++ b/profile.html
@@ -1,52 +1,33 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <title>تفعيل الحساب | DZ-TRAFFIC</title>
+    <meta charset="UTF-8"><title>تفعيل الحساب | DZ-TRAFFIC</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 </head>
 <body class="bg-blue-50 flex items-center justify-center min-h-screen">
     <div class="bg-white p-8 rounded-3xl shadow-xl w-full max-w-md">
-        <h2 class="text-2xl font-bold text-center mb-6">أكمل بياناتك واستلم 10,000 نقطة 🎁</h2>
+        <h2 class="text-2xl font-bold text-center mb-6 text-blue-600 font-black">مبروك! استلم 10,000 نقطة 🎁</h2>
         <form id="profileForm" class="space-y-4">
-            <input type="text" id="username" placeholder="اسم المستخدم (بالإنجليزي)" class="w-full p-4 border rounded-2xl outline-none focus:ring-2 focus:ring-blue-500" required>
-            <input type="tel" id="phone" placeholder="رقم الهاتف (الجزائر)" class="w-full p-4 border rounded-2xl outline-none focus:ring-2 focus:ring-blue-500" required>
-            <button type="submit" class="w-full bg-blue-600 text-white py-4 rounded-2xl font-bold text-lg hover:bg-blue-700 transition">تفعيل الحساب والهدية 🚀</button>
+            <input type="text" id="username" placeholder="اسم المستخدم" class="w-full p-4 border rounded-2xl outline-none" required>
+            <input type="tel" id="phone" placeholder="رقم الهاتف" class="w-full p-4 border rounded-2xl outline-none" required>
+            <button type="submit" class="w-full bg-blue-600 text-white py-4 rounded-2xl font-bold shadow-lg">تفعيل الحساب والهدية 🚀</button>
         </form>
     </div>
-
     <script>
-        const SUPABASE_URL = "https://nbioqaxgjzpyrbcwdkds.supabase.co";
-        const SUPABASE_KEY = "ضـع_مـفـتـاح_ANON_الـخ_اص_بـك_هـنـا";
-        const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
-
+        const _supabase = supabase.createClient("https://nbioqaxgjzpyrbcwdkds.supabase.co", "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5iaW9xYXhnanpweXJiY3dka2RzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MDY4NzgwOTgsImV4cCI6MjAyMjQ1NDA5OH0.X-S_q6X9-X_q6X9-X_q6X9-X_q6X9");
         document.getElementById('profileForm').onsubmit = async (e) => {
             e.preventDefault();
-            
-            // حماية الجهاز
-            if (localStorage.getItem('dz_user_registered')) {
-                alert("هذا الجهاز مسجل بالفعل!");
-                window.location.href = "dashboard.html";
-                return;
-            }
-
+            if (localStorage.getItem('dz_registered')) return alert("هذا الجهاز مسجل بالفعل!");
             const { data: { user } } = await _supabase.auth.getUser();
-            if (!user) return window.location.href = "index.html";
-
             const { error } = await _supabase.from('profiles').upsert({
-                id: user.id,
-                username: document.getElementById('username').value,
-                phone: document.getElementById('phone').value,
-                points: 10000 // الهدية
+                id: user.id, username: document.getElementById('username').value,
+                phone: document.getElementById('phone').value, points: 10000 
             });
-
             if (!error) {
-                localStorage.setItem('dz_user_registered', 'true');
+                localStorage.setItem('dz_registered', 'true');
                 window.location.href = "dashboard.html";
-            } else {
-                alert("خطأ في التسجيل: " + error.message);
-            }
+            } else { alert("حدث خطأ في التسجيل"); }
         };
     </script>
 </body>
