--- a/profile.html
+++ b/profile.html
@@ -6,32 +6,28 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 </head>
 <body class="bg-blue-50 flex items-center justify-center min-h-screen">
-    <div class="bg-white p-8 rounded-3xl shadow-xl w-full max-w-md">
-        <h2 class="text-2xl font-bold text-center mb-6 text-blue-600">مبروك! استلم 10,000 نقطة 🎁</h2>
-        <form id="profileForm" class="space-y-4">
-            <input type="text" id="username" placeholder="اسم المستخدم" class="w-full p-4 border rounded-2xl outline-none" required>
-            <input type="tel" id="phone" placeholder="رقم الهاتف" class="w-full p-4 border rounded-2xl outline-none" required>
-            <button type="submit" class="w-full bg-blue-600 text-white py-4 rounded-2xl font-bold shadow-lg">تفعيل الحساب والهدية 🚀</button>
+    <div class="bg-white p-10 rounded-[2.5rem] shadow-2xl w-full max-w-md text-center">
+        <h2 class="text-2xl font-black mb-4 text-blue-600 italic">مبروك! الهدية جاهزة 🎁</h2>
+        <p class="text-sm text-gray-500 mb-6 font-bold underline">املأ بياناتك لمرة واحدة فقط لتفعيل 10,000 نقطة</p>
+        <form id="pForm" class="space-y-4 text-right">
+            <input type="text" id="username" placeholder="اسمك المستعار" class="w-full p-4 bg-gray-50 border rounded-2xl outline-none" required>
+            <input type="tel" id="phone" placeholder="رقم هاتفك (للدعم)" class="w-full p-4 bg-gray-50 border rounded-2xl outline-none" required>
+            <button type="submit" class="w-full bg-blue-600 text-white py-4 rounded-2xl font-black shadow-lg hover:bg-blue-700 transition">تفعيل النقاط والدخول 🚀</button>
         </form>
     </div>
     <script>
         const _supabase = supabase.createClient("https://nbioqaxgjzpyrbcwdkds.supabase.co", "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5iaW9xYXhnanpweXJiY3dka2RzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MDY4NzgwOTgsImV4cCI6MjAyMjQ1NDA5OH0.X-S_q6X9-X_q6X9-X_q6X9-X_q6X9");
-        document.getElementById('profileForm').onsubmit = async (e) => {
+        document.getElementById('pForm').onsubmit = async (e) => {
             e.preventDefault();
-            if (localStorage.getItem('dz_registered')) return alert("عذراً، هذا الجهاز مسجل مسبقاً!");
-            
             const { data: { user } } = await _supabase.auth.getUser();
-            const { error } = await _supabase.from('profiles').upsert({
+            const { error } = await _supabase.from('profiles').upsert({ 
                 id: user.id, 
-                username: document.getElementById('username').value,
+                username: document.getElementById('username').value, 
                 phone: document.getElementById('phone').value, 
                 points: 10000 
             });
-
-            if (!error) {
-                localStorage.setItem('dz_registered', 'true');
-                window.location.href = "dashboard.html";
-            } else { alert("حدث خطأ أثناء تفعيل الهدية."); }
+            if (!error) window.location.href = "dashboard.html";
+            else alert("حدث خطأ في تفعيل الهدية!");
         };
     </script>
 </body>
