--- a/index.html
+++ b/index.html
@@ -2,33 +2,161 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DZ-TRAFFIC | تبادل الزيارات مجاناً</title>
+    <title>DZ-TRAFFIC | أفضل منصة جزائرية لتبادل الزيارات</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@700;900&display=swap" rel="stylesheet">
-    <style>body { font-family: 'Tajawal', sans-serif; }</style>
+    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@500;700;900&display=swap" rel="stylesheet">
+    <style>
+        body { font-family: 'Tajawal', sans-serif; background-color: #f4f7fe; }
+        .glass { background: rgba(255, 255, 255, 0.95); backdrop-filter: blur(10px); }
+        .btn-dz { transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1); }
+        .btn-dz:active { scale: 0.95; }
+    </style>
 </head>
-<body class="bg-slate-50 flex flex-col min-h-screen">
-    <nav class="p-5 bg-white shadow-sm flex justify-between items-center border-b">
-        <h1 class="text-2xl font-black text-blue-600 italic">DZ-TRAFFIC</h1>
-        <a href="https://t.me/MouzaiaDelivery" target="_blank" class="text-xs font-bold text-sky-500">الدعم الفني 📢</a>
-    </nav>
-    <main class="flex-grow flex flex-col items-center justify-center px-6 text-center">
-        <h2 class="text-4xl md:text-5xl font-black mb-6 leading-tight">احصل على <span class="text-blue-600 underline">10,000 نقطة</span> مجاناً!</h2>
-        <p class="text-gray-600 mb-10 max-w-sm mx-auto">سجل الآن وضع إعلاناتك وقنواتك مجاناً في المرحلة الأولى للمنصة. لا تدع الفرصة تفوتك!</p>
-        <button onclick="login()" class="bg-blue-600 text-white px-12 py-4 rounded-2xl font-black text-lg shadow-xl hover:scale-105 transition-all active:scale-95">الدخول عبر جوجل 🚀</button>
-        <div class="mt-8 flex gap-4 text-[10px] text-gray-400 font-bold uppercase tracking-widest">
-            <span>Telegram</span> • <span>YouTube</span> • <span>Websites</span>
-        </div>
-    </main>
-    <script>
-        const _supabase = supabase.createClient("https://nbioqaxgjzpyrbcwdkds.supabase.co", "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5iaW9xYXhnanpweXJiY3dka2RzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MDY4NzgwOTgsImV4cCI6MjAyMjQ1NDA5OH0.X-S_q6X9-X_q6X9-X_q6X9-X_q6X9");
-        async function login() {
-            await _supabase.auth.signInWithOAuth({ 
-                provider: 'google', 
-                options: { redirectTo: window.location.origin + '/check.html' } 
-            });
+<body>
+
+<div id="app"></div>
+
+<script>
+const _s = supabase.createClient("https://nbioqaxgjzpyrbcwdkds.supabase.co", "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5iaW9xYXhnanpweXJiY3dka2RzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MDY4NzgwOTgsImV4cCI6MjAyMjQ1NDA5OH0.X-S_q6X9-X_q6X9-X_q6X9-X_q6X9");
+
+async function init() {
+    const { data: { user } } = await _s.auth.getUser();
+    const app = document.getElementById('app');
+
+    if (!user) {
+        // واجهة الاستقبال (أفضل من زيارة برو)
+        app.innerHTML = `
+        <div class="min-h-screen flex flex-col items-center justify-center p-6 bg-gradient-to-br from-blue-600 to-blue-800 text-white">
+            <div class="bg-white text-blue-600 w-20 h-20 rounded-2xl flex items-center justify-center text-4xl font-black mb-6 shadow-2xl rotate-3">DZ</div>
+            <h1 class="text-4xl font-black mb-2">دي زاد ترافيك</h1>
+            <p class="opacity-80 mb-10 text-center max-w-sm font-medium">المنصة الجزائرية الأولى لزيادة متابعين تليجرام، يوتيوب، ومواقعك مجاناً.</p>
+            <button onclick="login()" class="bg-white text-blue-700 px-12 py-4 rounded-2xl font-black text-lg shadow-xl btn-dz hover:bg-gray-100">دخول سريع عبر جوجل 🚀</button>
+            <div class="mt-12 grid grid-cols-3 gap-8 text-center opacity-70">
+                <div><p class="font-black text-xl">10K</p><p class="text-[10px]">هدية تسجيل</p></div>
+                <div><p class="font-black text-xl">+1M</p><p class="text-[10px]">زيارات حقيقية</p></div>
+                <div><p class="font-black text-xl">24/7</p><p class="text-[10px]">دعم جزائري</p></div>
+            </div>
+        </div>`;
+        return;
+    }
+
+    const { data: p } = await _s.from('profiles').select('*').eq('id', user.id).single();
+
+    if (!p) {
+        // واجهة استلام الهدية
+        app.innerHTML = `
+        <div class="min-h-screen flex items-center justify-center p-6">
+            <div class="bg-white p-8 rounded-[2.5rem] shadow-2xl w-full max-w-md text-center border-t-8 border-blue-600">
+                <div class="text-5xl mb-4">🎁</div>
+                <h2 class="text-2xl font-black mb-2 text-gray-800 font-sans">مبروك الهدية!</h2>
+                <p class="text-gray-500 mb-6 text-sm italic">سجل اسمك لتفعيل 10,000 نقطة في حسابك</p>
+                <input id="nn" placeholder="اسمك المستعار" class="w-full p-4 bg-gray-50 rounded-2xl mb-4 text-center font-bold outline-none border-2 border-transparent focus:border-blue-500">
+                <button onclick="claim('${user.id}')" class="w-full bg-blue-600 text-white py-4 rounded-2xl font-black shadow-lg btn-dz">تفعيل النقاط الآن ✅</button>
+            </div>
+        </div>`;
+    } else {
+        // واجهة العمل (Dashboard) - تفوقنا فيها على ziyarapro
+        app.innerHTML = `
+        <header class="glass sticky top-0 z-50 border-b border-gray-100 p-4">
+            <div class="max-w-md mx-auto flex justify-between items-center">
+                <h1 class="font-black text-blue-600 text-2xl italic tracking-tighter">DZ-TRAFFIC</h1>
+                <div class="bg-blue-600 text-white px-4 py-1.5 rounded-full font-black text-sm flex items-center gap-2 shadow-md">
+                    <span class="text-yellow-300">🪙</span> <span id="pts">${p.points.toLocaleString()}</span>
+                </div>
+            </div>
+        </header>
+
+        <main class="max-w-md mx-auto p-4 space-y-6 pb-24">
+            <div class="bg-white p-6 rounded-[2rem] shadow-sm border border-gray-100">
+                <h3 class="font-black mb-4 text-gray-800 text-sm flex items-center gap-2">
+                    <span class="bg-blue-50 p-2 rounded-lg text-blue-600">🚀</span> أضف رابطك (تليجرام، يوتيوب...)
+                </h3>
+                <input id="ad_t" placeholder="عنوان جذاب لإعلانك" class="w-full p-4 bg-gray-50 rounded-xl mb-3 text-xs font-bold outline-none focus:ring-2 ring-blue-100">
+                <input id="ad_u" placeholder="الرابط المستهدف https://..." class="w-full p-4 bg-gray-50 rounded-xl mb-4 text-xs font-bold outline-none focus:ring-2 ring-blue-100">
+                <button onclick="addAd('${user.id}', ${p.points})" class="w-full bg-blue-600 text-white py-4 rounded-xl font-black text-sm shadow-blue-200 shadow-lg btn-dz">نشر الرابط مقابل 2,000 نقطة</button>
+            </div>
+
+            <div id="tasks" class="space-y-3">
+                <div class="flex justify-between items-center px-2 mb-2">
+                    <h3 class="font-black text-gray-700 text-sm italic underline decoration-blue-500 decoration-4">اجمع النقاط مجاناً</h3>
+                    <span class="text-[10px] bg-green-100 text-green-600 px-2 py-1 rounded font-bold">مهام متجددة</span>
+                </div>
+                <div id="tasks-container" class="space-y-3"></div>
+            </div>
+        </main>
+
+        <footer class="fixed bottom-0 left-0 right-0 p-4 glass border-t border-gray-100 flex justify-center">
+            <a href="https://t.me/MouzaiaDelivery" target="_blank" class="w-full max-w-md bg-[#0088cc] text-white flex items-center justify-center gap-3 py-3.5 rounded-2xl font-black shadow-lg btn-dz">
+                تواصل مع الدعم الجزائري 🇩🇿
+            </a>
+        </footer>`;
+        loadAds(user.id);
+    }
+}
+
+// الوظائف الخلفية
+async function login() { await _s.auth.signInWithOAuth({ provider: 'google', options: { redirectTo: window.location.href } }); }
+
+async function claim(id) {
+    const name = document.getElementById('nn').value;
+    if(!name) return;
+    await _s.from('profiles').upsert({ id: id, username: name, points: 10000 });
+    location.reload();
+}
+
+async function loadAds(uid) {
+    const { data: ads } = await _s.from('ads').select('*').neq('user_id', uid).order('id', {ascending: false});
+    const container = document.getElementById('tasks-container');
+    
+    if(!ads || ads.length === 0) {
+        container.innerHTML = `<div class="p-10 text-center text-gray-300 italic text-sm">لا توجد مهام حالياً، كن أول من ينشر!</div>`;
+        return;
+    }
+
+    ads.forEach(ad => {
+        const d = document.createElement('div');
+        d.className = "bg-white p-4 rounded-[1.5rem] flex justify-between items-center shadow-sm border border-gray-50 hover:border-blue-200 transition-all";
+        d.innerHTML = `
+            <div class="text-right">
+                <p class="font-black text-xs text-gray-800">${ad.title}</p>
+                <p class="text-[9px] text-gray-400 font-bold mt-1">المكافأة: <span class="text-blue-600">+${ad.reward_points} 🪙</span> | ${ad.required_time}ث</p>
+            </div>
+            <button onclick="runTask('${ad.url}', ${ad.id}, ${ad.reward_points}, ${ad.required_time}, '${uid}')" 
+                    id="b-${ad.id}" 
+                    class="bg-blue-50 text-blue-700 px-6 py-2.5 rounded-xl font-black text-xs btn-dz hover:bg-blue-600 hover:text-white">مشاهدة</button>`;
+        container.appendChild(d);
+    });
+}
+
+async function addAd(uid, pts) {
+    const t = document.getElementById('ad_t').value;
+    const u = document.getElementById('ad_u').value;
+    if(!t || !u.startsWith('http')) { alert("أدخل بيانات صحيحة!"); return; }
+    if(pts < 2000) { alert("رصيدك غير كافي!"); return; }
+
+    const { error } = await _s.from('ads').insert({ title: t, url: u, user_id: uid, reward_points: 50, required_time: 15 });
+    if(!error) {
+        await _s.rpc('increment_points', { user_id: uid, row_points: -2000 });
+        location.reload();
+    }
+}
+
+function runTask(url, id, r, t, uid) {
+    window.open(url, '_blank');
+    let s = t; const b = document.getElementById(`b-${id}`); b.disabled = true;
+    const timer = setInterval(async () => {
+        b.innerText = `${s--}ث`;
+        if (s < 0) {
+            clearInterval(timer);
+            b.innerText = "...";
+            await _s.rpc('increment_points', { user_id: uid, row_points: r });
+            location.reload();
         }
-    </script>
+    }, 1000);
+}
+
+init();
+</script>
 </body>
 </html>
